RESOLVED FIXED302661
[GFC][Debug] Crash under WTF::CanMakeCheckedPtr
https://bugs.webkit.org/show_bug.cgi?id=302661
Summary [GFC][Debug] Crash under WTF::CanMakeCheckedPtr
Sammy Gill
Reported 2025-11-17 12:13:10 PST
GridFormattingContext and GridLayout are not heap allocated so they do not need to inherit from canMakeCheckedPtr
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-17 12:13:17 PST
Sammy Gill
Comment 2 2025-11-17 12:16:46 PST
EWS
Comment 3 2025-11-17 15:19:10 PST
Committed 303141@main (d02381364497): <https://commits.webkit.org/303141@main> Reviewed commits have been landed. Closing PR #54064 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.