[GFC][Debug] Crash under WTF::CanMakeCheckedPtr https://bugs.webkit.org/show_bug.cgi?id=302661 rdar://164903170

Reviewed by Alan Baradlay.

GridFormattingContext is never heap allocated so we
currently hit an ASSERT in debug builds that was introduced in
302223@main. Since this object just lives on the stack we can
remove CanMakeCheckedPtr for it and add it back if we ever
decide it needs to be long lived for some reason.

Canonical link: https://commits.webkit.org/303141@main