Source/WebCore/layout/formattingContexts/grid/GridFormattingContext.h
@@ -42,9 +42,8 @@ class UnplacedGridItem;
 struct GridAreaLines;
 struct UnplacedGridItems;
 
-class GridFormattingContext : public CanMakeCheckedPtr<GridFormattingContext> {
+class GridFormattingContext {
     WTF_MAKE_TZONE_OR_ISO_ALLOCATED(GridFormattingContext);
-    WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(GridFormattingContext);
 public:
 
     struct GridLayoutConstraints {
